--- a/environment.yml
+++ b/environment.yml
@@ -3,66 +3,66 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.3=pyhd8ed1ab_0
-  - asttokens=2.2.1=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.12.7=h033912b_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - comm=0.1.2=pyhd8ed1ab_0
-  - debugpy=1.6.6=py310h7a76584_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - importlib-metadata=6.0.0=pyha770c72_0
-  - importlib_metadata=6.0.0=hd8ed1ab_0
-  - ipykernel=6.21.2=pyh736e0ef_0
-  - ipython=8.10.0=pyhd1c38e8_0
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jupyter_client=8.0.3=pyhd8ed1ab_0
-  - jupyter_core=5.2.0=py310h2ec42d9_0
-  - libcxx=14.0.6=hccf4f1f_0
-  - libffi=3.4.2=hecd8cb5_6
-  - libsodium=1.0.18=hbcb3906_1
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - ncurses=6.4=hcec6c5f_0
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - openssl=1.1.1t=hfd90126_0
-  - packaging=23.0=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pip=23.0.1=pyhd8ed1ab_0
-  - platformdirs=3.0.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.36=pyha770c72_0
-  - psutil=5.9.4=py310h90acd4f_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pygments=2.14.0=pyhd8ed1ab_0
-  - python=3.10.9=h218abb5_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - appnope=0.1.3
+  - asttokens=2.2.1
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - bzip2=1.0.8
+  - ca-certificates=2022.12.7
+  - certifi=2022.12.7
+  - comm=0.1.2
+  - debugpy=1.6.6
+  - decorator=5.1.1
+  - executing=1.2.0
+  - importlib-metadata=6.0.0
+  - importlib_metadata=6.0.0
+  - ipykernel=6.21.2
+  - ipython=8.10.0
+  - jedi=0.18.2
+  - jupyter_client=8.0.3
+  - jupyter_core=5.2.0
+  - libcxx=14.0.6
+  - libffi=3.4.2
+  - libsodium=1.0.18
+  - matplotlib-inline=0.1.6
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
+  - openssl=1.1.1t
+  - packaging=23.0
+  - parso=0.8.3
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=23.0.1
+  - platformdirs=3.0.0
+  - prompt-toolkit=3.0.36
+  - psutil=5.9.4
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pygments=2.14.0
+  - python=3.10
+  - python-dateutil=2.8.2
   - python_abi=3.10=2_cp310
-  - pyzmq=25.0.0=py310hf615a82_0
-  - readline=8.2=hca72f7f_0
-  - setuptools=65.6.3=py310hecd8cb5_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.40.1=h880c91c_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.12=h5d9f67b_0
-  - tornado=6.2=py310h90acd4f_1
-  - traitlets=5.9.0=pyhd8ed1ab_0
-  - typing-extensions=4.4.0=hd8ed1ab_0
-  - typing_extensions=4.4.0=pyha770c72_0
-  - tzdata=2022g=h04d1e81_0
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - wheel=0.38.4=py310hecd8cb5_0
-  - xz=5.2.10=h6c40b1e_1
-  - zeromq=4.3.4=he49afe7_1
-  - zipp=3.14.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h4dc903c_0
+  - pyzmq=25.0.0
+  - readline=8.2
+  - setuptools=65.6.3
+  - six=1.16.0
+  # - sqlite=3.40.1
+  - stack_data=0.6.2
+  - tk=8.6.12
+  - tornado=6.2
+  - traitlets=5.9.0
+  - typing-extensions=4.4.0
+  - typing_extensions=4.4.0
+  - tzdata=2022g
+  - wcwidth=0.2.6
+  - wheel=0.38.4
+  # - xz=5.2.10
+  - zeromq=4.3.4
+  - zipp=3.14.0
+  - zlib=1.2.13
   - pip:
-    - allen-v1dd==1.0.0
+    - -e .
     - anyio==3.6.2
     - appdirs==1.4.4
     - argon2-cffi==21.3.0
@@ -201,7 +201,6 @@ dependencies:
     - send2trash==1.8.0
     - shapely==2.0.1
     - simplejpeg==1.6.5
-    - sklearn==0.0.post1
     - sniffio==1.3.0
     - soupsieve==2.4
     - sqlitedict==2.1.0
